--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -30,6 +30,8 @@
                 </tr>
             {% endfor %}
         </table>
+
+        <p id="checkKing" class="center"></p>
     </div>
 
     <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
